--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -32,7 +32,7 @@ jobs:
     #- name: Run tests
     #  run: bundle exec rake
     - name: Generate combined adoc for Github presentation
-      run: ruby combine.ry userguide.adoc > userguide_github.adoc
+      run: ruby combine.ry userguide.adoc -o userguide_github.adoc
     - name: test
       run: wc userguide.adoc
 
