--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -35,5 +35,11 @@ jobs:
       run: ruby combine.ry userguide.adoc -o userguide_github.adoc
     - name: test
       run: wc userguide.adoc
+    - name: Update resources
+      uses: test-room-7/action-update-file@v1
+          with:
+              file-path: userguide_github.adoc
+                  commit-msg: Update resources
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
 
        
