--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,20 +19,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: 'Checkout'
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    
     - name: Set up Ruby
     # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
     # change this to (see https://github.com/ruby/setup-ruby#versioning):
       uses: ruby/setup-ruby@v1.51.1
       with:
         ruby-version: 2.6
+    
     - name: Install dependencies
       run: bundle install
+    
     - name: List path
       run: |
         git diff --name-only ${{ github.event.before }} ${{ github.sha }} | cut -d/ -f1 | sort -u
+    
     - name: Generate combined adoc for Github presentation
       run: ruby combine.ry userguide.adoc -o userguide_github.adoc
+    
     - name: Combined .adoc for Github presentation
       uses: test-room-7/action-update-file@v1
       with:
